; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_read_error_message.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_read_error_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@TNEWLINE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @read_error_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_error_message() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = call i32* (...) @make_buffer()
  store i32* %3, i32** %1, align 8
  br label %4

4:                                                ; preds = %26, %0
  %5 = call %struct.TYPE_4__* (...) @lex()
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @TNEWLINE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %4
  %12 = load i32*, i32** %1, align 8
  %13 = call i8* @buf_body(i32* %12)
  ret i8* %13

14:                                               ; preds = %4
  %15 = load i32*, i32** %1, align 8
  %16 = call i64 @buf_len(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %14
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i32*, i32** %1, align 8
  %25 = call i32 @buf_write(i32* %24, i8 signext 32)
  br label %26

26:                                               ; preds = %23, %18, %14
  %27 = load i32*, i32** %1, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %29 = call i32 @tok2s(%struct.TYPE_4__* %28)
  %30 = call i32 @buf_printf(i32* %27, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %29)
  br label %4
}

declare dso_local i32* @make_buffer(...) #1

declare dso_local %struct.TYPE_4__* @lex(...) #1

declare dso_local i8* @buf_body(i32*) #1

declare dso_local i64 @buf_len(i32*) #1

declare dso_local i32 @buf_write(i32*, i8 signext) #1

declare dso_local i32 @buf_printf(i32*, i8*, i32) #1

declare dso_local i32 @tok2s(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
